--- a/publications.Rmd
+++ b/publications.Rmd
@@ -28,13 +28,13 @@ This article investigates how the Amazon has been constructed as a problem in Br
 
 $$\\[0.1cm]$$
 
-## Under Review
+## Forthcoming
 
 $$\\[0.1cm]$$
 
 **"Radiating Truthiness": Authenticity performances in politics in Brazil and the United States** 
 
-*Forthcoming in Political Studies*
+*Political Studies*
 
 Political authenticity is connected to higher levels of political trust from electorates and can influence political outcomes, but it is often overlooked as a relevant factor for electoral behavior. To date, discussions of how authenticity appears and changes in politics typically remain at the theoretical level and are rarely comparative. This article develops a framework to identify and compare how authenticity is performed in political discourses over time and across settings by politicians. To demonstrate the usefulness of the framework, this article investigates authenticity performances in 21,496 political texts of electoral debates, interviews, campaigns, and official speeches by presidents and presidential candidates in Brazil and the United States (US) since 1988. The findings indicate that authenticity is generally performed with greater frequency by presidents and presidential candidates in Brazil than in the US, though authenticity performances are not more prevalent during election years in either country.
 
