--- a/index.Rmd
+++ b/index.Rmd
@@ -16,7 +16,7 @@ $$\\[0.1cm]$$
 
 $$\\[0.1cm]$$
 
-<p class="text-center">*If you are interested in environmental politics, the Amazon rainforest, or Brazilian political discourses, please check my research article on [Which Amazon Problem? Problem-constructions and Transnationalism in Brazilian Presidential Discourse since 1985 (with Livio Silva-Muller)](https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639)*</p>
+<p class="text-center">*If you are interested in political authenticity, political discourse, or comparative politics, please check my article on [authenticity performances in politics in Brazil and the United States](https://journals.sagepub.com/doi/10.1177/00323217241261229). If, instead, you are interested in environmental politics, the Amazon rainforest, or Brazilian political discourses, please check my article on [problem-constructions and transnationalism in presidential discourses since 1985 (with Livio Silva-Muller)](https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639)*</p>
 
 $$\\[0.1cm]$$
 
