--- a/index.Rmd
+++ b/index.Rmd
@@ -12,11 +12,11 @@ h1.title {
 
 $$\\[0.1cm]$$
 
-<p class="text-center">I am currently a PhD candidate at the International Relations and Political Science Department at the Geneva Graduate Institute. My dissertation leverages advanced text analysis techniques in R, such as supervised machine learning, to investigate how authenticity, problem construction, and urgency appear and change over time and across settings in discursive politics. I also work as a Research Assistant in the "PANARCHIC" project at the Centre for International Environmental Studies. For the project, I develop, contribute, and maintain several R packages that assist researchers dealing with multiple, overlapping, and uncertain datasets across various domains of global governance. I am broadly interested in issues related to political discourse and environmental politics in Latin America. During my free time, I restore vintage bikes.</p>
+<p class="text-center"> My research leverages advanced text analysis techniques in R, such as supervised machine learning, to comparatively investigate diverse aspects of political discourses. I am currently a Post-Doctoral Researcher in Environmental Governance and Global Development at the Wyss Academy for Nature at the University of Bern. I hold a PhD in International Relations and Political Science Department from the Geneva Graduate Institute. I am broadly interested in issues related to political discourse and environmental politics in Latin America. I also develop, contribute, and maintain several R packages that assist researchers conducting social network analysis and connecting global governance data across domains. During my free time, I restore vintage bikes ;) </p>
 
 $$\\[0.1cm]$$
 
-<p class="text-center">*If you are interested in political authenticity, political discourse, or comparative politics, please check my article on [authenticity performances in politics in Brazil and the United States](https://journals.sagepub.com/doi/10.1177/00323217241261229). If, instead, you are interested in environmental politics, the Amazon rainforest, or Brazilian political discourses, please check my article on [problem-constructions and transnationalism in presidential discourses since 1985 (with Livio Silva-Muller)](https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639)*</p>
+<p class="text-center">*If you are interested in political authenticity, please check my article on [authenticity performances in politics in Brazil and the United States](https://journals.sagepub.com/doi/10.1177/00323217241261229). If, instead, you are interested in environmental politics in the Amazon rainforest, please check my article on [problem-constructions and transnationalism in presidential discourses since 1985 (with Livio Silva-Muller)](https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639)*</p>
 
 $$\\[0.1cm]$$
 
